Добавлены стили для шапки

--- a/markup/components/header/header.html
+++ b/markup/components/header/header.html
@@ -3,8 +3,8 @@
         <div class="left-part">
             <div class="logo">
                 <a href="#" class="logo-link">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="131.939px" height="50.001px" viewBox="0 0 131.939 50.001" enable-background="new 0 0 131.939 50.001"
+                    <svg version="1.1" id="logotype" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 131.939 50.001" enable-background="new 0 0 131.939 50.001"
 	 xml:space="preserve">
 <path fill="#363B42" d="M71.939,16.854c0.632,0,0.853,0.192,0.853,0.823v12.548c0,0.631-0.221,0.85-0.853,0.85H55.633
 	c-0.632,0-0.823-0.219-0.823-0.85V17.678c0-0.631,0.191-0.823,0.823-0.823h1.509c0.632,0,0.853,0.192,0.853,0.823v10.434h4.199
